<resources>
    <string name="app_name">Ayudadita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesion</string>

    <!-- Opciones de menu-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">Editar perfil</string>
    <string name="menu_conocenos">Conocenos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola blanco</string>

    <!--log in-->
    <string name="ForgetMyPassword"><u>Olvide mi contraseña</u></string>
    <string name="LogIn">Iniciar Sesión</string>
    <string name="PasswordHint">contraseña</string>
    <string name="EmailHint">correo electronico</string>
    <!--Registrar-->
    <string name="Registration">Registarme</string>
    <string name="EnterPassword">Ingresa tu contraseña</string>
    <string name="EnterEmailHint">Ingresa tu correo institucional</string>
    <string name="EnterName">Ingresa tu nombre</string>
    <string name="RegistrationText">Regístrate</string>
    <string name="IAcceptTermsConditions">Acepto Términos y Condiciones</string>
    <string name="RegistrationButton">Registrar</string>
    <string name="logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Olvide mi contraseña-->
    <string name="forgetpassword">Olvide mi contraseña</string>
    <string name="EnterEmail">Ingresa tu correo</string>
    <string name="RestorePassword">Reestablecer contraseña</string>
    <!--Preguntas-->
    <string name="what_is_your_question">¿Cuál es tu pregunta?</string>
    <string name="Write_question">Escribe aquí tu pregunta</string>

    <!-- Pantallas de semestre-->
    <string name="semester_title_first">Primer Semestre</string>


    <!--Acerca de nosotros-->
    <string name="AboutUsText">Acerca de nosotros</string>
    <string name="AboutUsContent">Permitir a estudiantes y docentes del instituto poder interactuar en un foro donde se publicarán dudas académicas y respuestas de tal manera que se cree un canal de comunicación para brindar una respuesta que contribuya a la resolución de las dudas expresadas por el alumno de la comunidad.
\n\nEsto servirá para mejorar la calidad educativa percibida por los estudiantes y contribuir a su desarrollo académico, ya que ocasionalmente los estudiantes por diferentes motivos mantienen dudas académicas y esto genera un efecto bola de nieve que no les permite comprender temas más avanzados de una o más asignaturas.</string>
    <string name="AboutUsContact"><u>Contacto</u></string>

    <!--Home-->
    <string name="title_semester">Semestres</string>

    <!--Contactos-->
    <string name="contact_contacto">Contacto de los desarrolladores</string>
    <string name="contact_correo">Correo electrónico</string>
    <string name="contact_gmail">AyudadITA@gmail.com</string>
    <string name="contact_numero">Número de telefóno</string>
    <string name="contact_numerotelefonico">+52 449 544 73 37</string>

    <!--Settings-->
    <string name="settings_configuration">Configuración</string>
    <string name="settings_text_mode">Establecer modo nocturno</string>
    <string name="settings_text_language">Lenguaje</string>
    <string name="settings_radio_night">Modo Nocturno</string>
    <string name="settings_radio_es">Español</string>
    <string name="settings_radio_en">Inglés</string>

    <!--Delete Account-->
    <string name="deleteAccount">Eliminar cuenta</string>
    <string name="pointDeleteAccount">Estás a punto de eliminar tu cuenta.</string>
    <string name="wishContinue">¿Desea Continuar?</string>


</resources>