<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_contact">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/ayudadita_logo" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/contact_contacto"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/contact_correo"
        style="@style/textoCuerpo"
        android:textColor="#0077B6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/contact_gmail"
        style="@style/textoCuerpo"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="235dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="28dp"
        android:text="@string/contact_numero"
        style="@style/textoCuerpo"
        android:textColor="#0077B6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="28dp"
        android:text="@string/contact_numerotelefonico"
        style="@style/textoCuerpo"
        android:textColor="#000000"
        android:textSize="24sp" />

</FrameLayout>