<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="239dp"
        android:layout_height="184dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manos" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textoTitulo"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textoCuerpo"
        android:layout_width="269dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:text="@string/settings_text_mode"
        android:textAlignment="textStart"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView9"
        style="@style/textoCuerpo"
        android:layout_width="269dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_text_language"
        android:textAlignment="textStart"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonModoNocturno" />

    <RadioButton
        android:id="@+id/radioButtonModoNocturno"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:fontFamily="@font/roboto_regular"
        android:scaleType="fitCenter"
        android:text="@string/settings_radio_night"
        android:textColor="#03045E"
        android:textSize="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonEN"
        style="@style/BotonAyudadita"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:text="@string/settings_radio_en"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonES"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/buttonES"
        style="@style/BotonAyudadita"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginEnd="60dp"
        android:text="@string/settings_radio_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.163" />


</androidx.constraintlayout.widget.ConstraintLayout>