<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delete_account">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/image"
        android:layout_width="203dp"
        android:layout_height="121dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@drawable/manos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo"
        style="@style/textoTitulo"
        android:layout_width="305dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/deleteAccount"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="306dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:text="@string/pointDeleteAccount"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="219dp"
        android:layout_height="67dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="36dp"
        android:text="@string/wishContinue"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/eliminarCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/eliminarCuenta"
        android:layout_width="105dp"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>